--- a/albums.html
+++ b/albums.html
@@ -9,7 +9,7 @@
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>Document</title>
+    <title>Albums</title>
   </head>
   <body>
     <div class="both">
