signup and signin page completed

--- a/sign-in.html
+++ b/sign-in.html
@@ -8,9 +8,17 @@
     <title>Login-Page</title>
   </head>
   <body>
+    <div id="container">
     <header>
       <nav>
-        <ul></ul>
+        <ul>
+          <li>
+            <a href="">Contact-Us</a>
+          </li>
+          <li>
+            <a href="sign-up.html">Sign-Up</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -39,5 +47,6 @@
         </form>
       </div>
     </main>
+  </div>
   </body>
 </html>
