Sign-up page completed

--- a/sign-up.html
+++ b/sign-up.html
@@ -23,24 +23,25 @@
       </header>
 
       <main>
-        <div id="form-content">
+        <div id="form-content" >
           <div id="signup-heading">
             <h1>Sign-Up</h1>
           </div>
+            <form action="mailto:hmudgal09@gmail.com" method="post">
 
           <div class="form-classes">
             <label for="user-name">User-Name :</label>
-            <input type="text" id="user-name" />
+            <input type="text" id="user-name" placeholder="Ex:hemantmudgal" />
           </div>
 
           <div class="form-classes">
             <label for="password">Password :</label>&nbsp&nbsp
-            <input type="password" id="password" />
+            <input type="password" id="password" placeholder="1234@abcd" />
           </div>
 
           <div class="form-classes">
             <label for="confrm-password">Confirm-Password : </label>
-            <input type="password" id="confrm-password" />
+            <input type="password" id="confrm-password" placeholder="same-as-password" />
           </div>
 
           <div class="form-classes">
@@ -49,6 +50,7 @@
           </div>
 
           <button>Sign-up</button>
+        </form>
         </div>
       </main>
     </div>
