--- a/sign-in.html
+++ b/sign-in.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li>
-            <a href="">Contact-Us</a>
+            <a href="Contact-us.html">Contact-Us</a>
           </li>
           <li>
             <a href="sign-up.html">Sign-Up</a>
