Added help and hello to the footer

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -82,11 +82,16 @@
         </main>
 
         <footer>
-            <div>
+            <div id="hello-div" class="footer-div">
                 <p>SAY HELLO!<a href="sign-up.html">HELLO@BEATS&RYTHM.IN </a></p>
 
             </div>
             <hr>
+
+            <div id="help-div" class="footer-div">
+                <p>For more help click on : <a href="mailto:hmudgal@gmail.comk">Help</a></p>
+
+            </div>
         </footer>
 
     </div>
