Contact Page completed

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/contactpage.css">
     <link rel="icon" href="images/favicon.ico">
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
     <title>Beats & Rythm</title>
 </head>
 <body>
@@ -75,6 +75,27 @@
                 </div>
 
                 <div id="section-2-rightdiv">
+                    <div id="section-2-firstdiv">
+                        
+                        <div class="icon-div">
+                            <i class="fas fa-headphones-alt"></i>
+                        </div>
+                        <div class="content-div">
+                            <p>The purpose to make this project is to provide a platform where any one can 
+                                check different type Music and songs released.</p></div>
+                        <div class="icon-div">
+                            <i class="fas fa-guitar"></i>
+                        </div>
+                        <div class="content-div">
+                            <p>Here are Sub Section which have lots of category where user can visit and 
+                                select songs.</p></div>
+                        <div class="icon-div">
+                            <i class="fas fa-music"></i>
+                        </div>
+                        <div class="content-div">
+                            <p>This will reduce the time of the user for searching for there favroite songs
+                                they just click on song which will added to their favroite section. </p></div>
+                    </div>
                 </div>
                 
             </section>
@@ -89,8 +110,7 @@
             <hr>
 
             <div id="help-div" class="footer-div">
-                <p>For more help click on : <a href="mailto:hmudgal@gmail.comk">Help</a></p>
-
+                <p>For more help click on : <a href="mailto:hmudgal09@gmail.com">Help</a></p>
             </div>
         </footer>
 
