Section-2-rightdiv buttons completed

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -96,6 +96,10 @@
                             <p>This will reduce the time of the user for searching for there favroite songs
                                 they just click on song which will added to their favroite section. </p></div>
                     </div>
+
+                    <button>
+                        <a href="#hello-div">CONTACT US</a>
+                    </button>
                 </div>
                 
             </section>
