Create music.html and music.css

--- a/home.html
+++ b/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/home.css" />
     <script
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>Albums</title>
+    <title>Home</title>
   </head>
   <body>
     <div class="both">
@@ -74,14 +74,11 @@
         <div class="navbar">
           <nav>
             <ul>
-              <a href="#"><li class="box-list">playlist</li></a>
-              <a href="#"><li class="box-list">stations</li></a>
-              <a href="#"><li class="box-list">artists</li></a>
-              <a href="albums.html"><li class="box-list">albums</li></a>
-              <a href="#"><li class="box-list">songs</li></a>
-              <a href="#"><li class="box-list">genres</li></a>
-              <li class="leftside">382 Albums</li>
-              <a><li class="leftside">shuffle</li></a>
+              <a href="home.html"><li class="box-list">Home</li></a>
+              <a href="#"><li class="box-list">Music</li></a>
+              <a href="#"><li class="box-list">Artists</li></a>
+              <a href="#"><li class="box-list">About</li></a>
+              <a href="Contact-us.html"><li class="box-list">Contacts</li></a>
             </ul>
           </nav>
         </div>
