--- a/sign-up.html
+++ b/sign-up.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/signup-page.css" />
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico" />
     <title>Sign-Up</title>
   </head>
   <body>
@@ -24,34 +24,37 @@
       </header>
 
       <main>
-        <div id="form-content" >
+        <div id="form-content">
           <div id="signup-heading">
             <h1>Sign-Up</h1>
           </div>
-            <form action="mailto:hmudgal09@gmail.com" method="post">
+          <form action="mailto:hmudgal09@gmail.com" method="post">
+            <div class="form-classes">
+              <label for="user-name">User-Name :</label>
+              <input type="text" id="user-name" placeholder="Ex:hemantmudgal" />
+            </div>
 
-          <div class="form-classes">
-            <label for="user-name">User-Name :</label>
-            <input type="text" id="user-name" placeholder="Ex:hemantmudgal" />
-          </div>
+            <div class="form-classes">
+              <label for="password">Password :</label>&nbsp&nbsp
+              <input type="password" id="password" placeholder="1234@abcd" />
+            </div>
 
-          <div class="form-classes">
-            <label for="password">Password :</label>&nbsp&nbsp
-            <input type="password" id="password" placeholder="1234@abcd" />
-          </div>
+            <div class="form-classes">
+              <label for="confrm-password">Confirm-Password : </label>
+              <input
+                type="password"
+                id="confrm-password"
+                placeholder="same-as-password"
+              />
+            </div>
 
-          <div class="form-classes">
-            <label for="confrm-password">Confirm-Password : </label>
-            <input type="password" id="confrm-password" placeholder="same-as-password" />
-          </div>
+            <div class="form-classes">
+              <input type="checkbox" id="checkbox" />
+              <p>Term & Condition</p>
+            </div>
 
-          <div class="form-classes">
-            <input type="checkbox" id="checkbox" />
-            <p>Term & Condition</p>
-          </div>
-
-          <button>Sign-up</button>
-        </form>
+            <button>Sign-up</button>
+          </form>
         </div>
       </main>
     </div>
