--- a/music.html
+++ b/music.html
@@ -14,6 +14,7 @@
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
     <link rel="stylesheet" href="css/music.css" />
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
     <nav>
@@ -29,7 +30,7 @@
 
     <div class="container">
       <div class="songList">
-        <h1>Best of 2021</h1>
+        <h1>Feel Your Favourite Music Here</h1>
         <div class="songItemContainer">
           <div class="songItem">
             <img alt="1" />
@@ -38,7 +39,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="0" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -49,7 +50,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="1" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -60,7 +61,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="2" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -71,7 +72,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="3" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -82,7 +83,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="4" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -93,7 +94,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="5" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -104,7 +105,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="6" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -115,7 +116,7 @@
               ><span class="timestamp"
                 >05:34
                 <span>
-                  <i class="far songItemPlay fa-play-circle"></i
+                  <i id="7" class="far songItemPlay fa-play-circle"></i
                 ></span> </span
             ></span>
           </div>
@@ -135,13 +136,13 @@
       />
       <div class="icons">
         <!-- fontawesome icons -->
-        <i class="fas fa-3x fa-step-backward"></i>
+        <i class="fas fa-3x fa-step-backward" id="previous"></i>
         <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
-        <i class="fas fa-3x fa-step-forward"></i>
+        <i class="fas fa-3x fa-step-forward" id="next"></i>
       </div>
       <div class="songInfo">
-        <img src="images/sound-wave.gif" alt="sound-wave" id="gif" />Let me love
-        you - Justin Beiber
+        <img src="images/sound-wave.gif" alt="sound-wave" id="gif" />
+        <span id="masterSongName">Rythm - Beats and Rythm Official</span>
       </div>
     </div>
     <script src="js/script.js"></script>
