Created an artists.html and artists.css file.

--- a/home.html
+++ b/home.html
@@ -39,11 +39,6 @@
                 <i class="fas fa-music"></i>My Library
               </li></a
             >
-            <a href="#"
-              ><li class="left-list">
-                <i class="fas fa-signal-stream"></i>Browse stations
-              </li></a
-            >
           </ul>
         </div>
         <div>
@@ -75,7 +70,7 @@
           <nav>
             <ul>
               <a href="home.html"><li class="box-list">Home</li></a>
-              <a href="#"><li class="box-list">Music</li></a>
+              <a href="music.html"><li class="box-list">Music</li></a>
               <a href="#"><li class="box-list">Artists</li></a>
               <a href="#"><li class="box-list">About</li></a>
               <a href="Contact-us.html"><li class="box-list">Contacts</li></a>
