--- a/sign-in.html
+++ b/sign-in.html
@@ -39,10 +39,10 @@
           <input id="check" type="checkbox">
           <p>Terms & Condition</p>
 
-          <button id="btn">Log-in</button>
-
           <div>
-              
+            <a href="music.html" class="sign-in-button">Sign-in</a>
+
+          </div>              
           <a id="forgot-pass" href="https://www.google.com" target="_blank">forgot password</a>
           </div>
         </form>
