Create nav bar in artists.html

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -21,7 +21,7 @@
                     <td>
                         <div id="logo-div"><img src="images/Logo.png" alt=""></div>
                     </td>
-                    <td><h1>Beats <br>and<br> Rythm</h1></td>
+                    <td><h1>Rhythm <br>and<br> Beats</h1></td>
                 </tr>
             </table>
 
