--- a/artists.html
+++ b/artists.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="./js/script.js" />
   </head>
   <body>
+    <div class="navbar">
+      <ul>
+        <a href="#"><li>Home</li></a>
+        <a href="#"><li>Songs</li></a>
+        <a href="#"><li>About</li></a>
+      </ul>
+    </div>
     <div class="music-player">
       <div class="artist">
         <div id="artist1" onmouseover="fun1(this)">
