update the text content inside the h1 tag inside the div tag

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -52,7 +52,7 @@
                 <div id="section-1-leftdiv">
                     
                 <h1>listen your favorite music<br>
-                    with Beats and Rythm</h1>
+                    with Rhythm and Beats</h1>
                     <button>
                         <a href="#Learn-More">Learn More</a>
                     </button>
