completed home.html

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <div class="both">
       <div id="left-box">
         <div>
-          <h1>Google Play <span>Music</span></h1>
+          <h1><span>Rhythm and Beats</span></h1>
         </div>
         <div>
           <ul>
@@ -76,6 +76,17 @@
               <a href="Contact-us.html"><li class="box-list">Contacts</li></a>
             </ul>
           </nav>
+        </div>
+        <div id="main-container">
+          <div class="div1">
+            <a href="music.html"><img src="./images/justin.jpeg" /> </a>
+          </div>
+          <div class="div1">
+            <a href="music.html"><img src="./images/alan.jpeg" /> </a>
+          </div>
+          <div class="div1">
+            <a href="music.html"><img src="./images/selena.jpeg" /> </a>
+          </div>
         </div>
       </div>
     </div>
