Rollback prevoius commits deleted mistakenly by

--- a/sign-up.html
+++ b/sign-up.html
@@ -28,7 +28,7 @@
           <div id="signup-heading">
             <h1>Sign-Up</h1>
           </div>
-          <form action="mailto:hmudgal09@gmail.com" method="post">
+          <form action="home.html" method="post">
             <div class="form-classes">
               <label for="user-name">User-Name :</label>
               <input type="text" id="user-name" placeholder="Ex:hemantmudgal" />
@@ -51,9 +51,12 @@
             <div class="form-classes">
               <input type="checkbox" id="checkbox" />
               <p>Term & Condition</p>
+              <a href="sign-in.html" class="sign-up-button">
+                
+                Sign-up
+            </a>
             </div>
 
-            <button>Sign-up</button>
           </form>
         </div>
       </main>
