page linked to contact us page

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -108,7 +108,7 @@
 
         <footer>
             <div id="hello-div" class="footer-div">
-                <p>SAY HELLO!<a href="sign-up.html">HELLO@BEATS&RYTHM.IN </a></p>
+                <p>SAY HELLO!<a href="music.html">HELLO@BEATS&RYTHM.IN </a></p>
 
             </div>
             <hr>
