page linking correction

--- a/sign-in.html
+++ b/sign-in.html
@@ -41,7 +41,7 @@
 
           <div>
 
-            <a href="music.html" class="sign-in-button">Sign-in</a>
+            <a href="home.html" class="sign-in-button">Sign-in</a>
 
           </div>              
 
