update the href property inside the a tag

--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <div class="navbar">
           <nav>
             <ul>
-              <a href="home.html"><li class="box-list">Home</li></a>
+              <a href="index.html"><li class="box-list">Home</li></a>
               <a href="music.html"><li class="box-list">Music</li></a>
               <a href="artists.html"><li class="box-list">Artists</li></a>
               <a href="#"><li class="box-list">About</li></a>
