update the href property for the a tag containing the text About inside the home.html

--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
               <a href="index.html"><li class="box-list">Home</li></a>
               <a href="music.html"><li class="box-list">Music</li></a>
               <a href="artists.html"><li class="box-list">Artists</li></a>
-              <a href="#"><li class="box-list">About</li></a>
+              <a href="Contact-us.html"><li class="box-list">About</li></a>
               <a href="Contact-us.html"><li class="box-list">Contacts</li></a>
             </ul>
           </nav>
