Change Search bar for home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
         <div class="search-right">
           <input type="text" id="searchtext" placeholder="Search music" />
+          <i class="fas fa-search"></i>
         </div>
         <div class="navbar">
           <nav>
