--- a/sign-in.html
+++ b/sign-in.html
@@ -28,7 +28,7 @@
             <h1>Sign-in</h1>
           <div class="user-id">
             <label class="color-changer" for="username">Username</label>
-            <input type="text" id="username" placeholder="Ex: hemantmudgal" />
+            <input type="text" id="username" placeholder="Ex: hemantmudgal" required />
           </div>
 
           <div>
@@ -36,12 +36,12 @@
             <input type="password" id="password" placeholder="1234@abcd" />
           </div>
 
-          <input id="check" type="checkbox">
+          <input id="check" type="checkbox" checked>
           <p>Terms & Condition</p>
 
           <div>
 
-            <a href="home.html" class="sign-in-button">Sign-in</a>
+            <a href="index.html" class="sign-in-button">Sign-in</a>
 
           </div>              
 
