--- a/music.html
+++ b/music.html
@@ -20,7 +20,7 @@
     <nav>
       <ul>
         <li class="brand">
-          <img src="images/favicon.ico" alt="Beats and Rythm" />Beats and Rythm
+          <img src="images/favicon.ico" alt="Beats and Rhythm" />Rhythm And Beats
         </li>
         <li><a href="index.html">Home</a></li>
         <li><a href="Contact-us.html">About</a></li>
