--- a/sign-up.html
+++ b/sign-up.html
@@ -58,6 +58,18 @@
               <span class="formerror"> </span>
             </div>
 
+            <div class="form-classes" id="phone">
+              <label for="user-name">Phone :</label>
+              <input
+                type="text"
+                name="fphone"
+                id="userPhone"
+                placeholder="Ex:6376******"
+                required
+              />
+              <span class="formerror"> </span>
+            </div>
+
             <div class="form-classes" id="password">
               <label for="password">Password :</label>&nbsp&nbsp
               <input
