update index.html to home.html

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <div>
           <h1><span>Rhythm and Beats</span></h1>
         </div>
-        <div>
+        <div id="header">
           <ul>
             <a href="#"
               ><li class="left-list">
@@ -70,7 +70,7 @@
         <div class="navbar">
           <nav>
             <ul>
-              <a href="index.html"><li class="box-list">Home</li></a>
+              <a href="home.html"><li class="box-list">Home</li></a>
               <a href="music.html"><li class="box-list">Music</li></a>
               <a href="artists.html"><li class="box-list">Artists</li></a>
               <a href="Contact-us.html"><li class="box-list">About</li></a>
@@ -80,13 +80,46 @@
         </div>
         <div id="main-container">
           <div class="div1">
-            <a href="music.html"><img src="./images/justin.jpeg" /> </a>
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/justin.jpeg" /></a>
           </div>
           <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
             <a href="music.html"><img src="./images/alan.jpeg" /> </a>
           </div>
           <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
             <a href="music.html"><img src="./images/selena.jpeg" /> </a>
+          </div>
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/weeknd.jpeg" /> </a>
+          </div>
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/1.jpg" /> </a>
+          </div>
+        </div>
+        <div id="main-container">
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/2.jpg" /> </a>
+          </div>
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/3.jpg" /> </a>
+          </div>
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/4.jpg" /> </a>
+          </div>
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/5.jpg" /> </a>
+          </div>
+          <div class="div1">
+            <i class="fas fa-headphones-alt"></i>
+            <a href="music.html"><img src="./images/6.jpg" /> </a>
           </div>
         </div>
       </div>
