--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
         <li class="brand">
           <img src="images/favicon.ico" alt="Beats and Rhythm" />Rhythm And Beats
         </li>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="Contact-us.html">About</a></li>
         <li><a href="sign-in.html">Sign-in</a></li>
       </ul>
