final login and registration update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>Sign-Up</h1>
           </div>
           <form
-            action="/myaction.php"
+            action="myaction.php"
             name="myForm"
             onsubmit="return validateForm()"
             method="post"
