--- a/music.html
+++ b/music.html
@@ -14,15 +14,16 @@
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
     <link rel="stylesheet" href="css/music.css" />
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <nav>
       <ul>
         <li class="brand">
-          <img src="images/favicon.ico" alt="Beats and Rhythm" />Rhythm And Beats
+          <img src="images/favicon.ico" alt="Beats and Rhythm" />Rhythm And
+          Beats
         </li>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="home.php">Home</a></li>
         <li><a href="Contact-us.html">About</a></li>
         <li><a href="sign-in.html">Sign-in</a></li>
       </ul>
