--- a/sign-in.html
+++ b/sign-in.html
@@ -17,7 +17,7 @@
               <a href="Contact-us.html">Contact-Us</a>
             </li>
             <li>
-              <a href="sign-up.html">Sign-up</a>
+              <a href="index.html">Sign-up</a>
             </li>
           </ul>
         </nav>
@@ -29,7 +29,7 @@
             <h1>Sign-in</h1>
           </div>
           <form
-            action="/myaction.php"
+            action="home.php"
             name="myForm"
             onsubmit="return validateForm()"
             method="post"
@@ -70,7 +70,7 @@
               <span class="formerror"> </span>
             </div>
             <div class="form-classes">
-              <input type="submit" class="sign-up-button" value="Signup" />
+              <input type="submit" class="sign-up-button" value="Signin" />
             </div>
           </form>
         </div>
