--- a/Contact-us.html
+++ b/Contact-us.html
@@ -31,7 +31,7 @@
                         <a href="sign-in.html">Sign-in</a>
                     </li>
                     <li>
-                        <a href="sign-up.html">Sign-up</a>
+                        <a href="index.html">Sign-up</a>
                     </li>
                 </ul>
             </nav>
